# stoicheia

./: .gitignore  Cargo.toml  README.md  publish.sh  stoicheia-storage.db
benches/: internals.rs
pystoicheia/: Cargo.toml
pystoicheia/src/: lib.rs
src/: axis.rs  catalog.rs  error.rs  lib.rs  patch.rs  quilt.rs  sqlite.rs  sqlite_catalog_schema.sql
src/python/: axis.rs  mod.rs  patch.rs
stoicheia/: __init__.py  patchy.py  test_all.py
stoicheia/src/: axis.rs  lib.rs
