[package]
name = "stoicheia"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.45"
ndarray = {version= "0.13.0", features=["serde", "approx"]}
bincode = "1.2.1"
serde_derive = "1.0.104"
serde = "1.0.104"
itertools = "0.8.2"
rusqlite = {version="0.21.0", features=["bundled"]}
rand = {version="0.7.3", features=["small_rng"]}
thiserror = "1.0.10"
approx = "0.3.2"

pyo3 = {version="0.8.5", features=["extension-module"], optional=true}
numpy = {version="0.7.0", optional=true}
num-traits = "0.2.11"
chrono = "0.4.10"
brotli = "3.3.0"
lazy_static = "1.4.0"
lz4 = "1.23.1"
arrayvec = "0.5.1"
ndarray-stats = "0.3.0"
noisy_float = "0.1.12"
enum-map = "0.6.2"


[features]
default = []
python = [ "pyo3", "numpy"]

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "internals"
harness = false
